# LightCode

./: CMakeLists.txt  editor.ui~  test.glade  test.glade~
include/: textedit.hpp  window.hpp
include/content/: contentmanager.hpp  contentpage.hpp  settingspage.hpp  textedit.hpp
include/filemanager/: filemanager.hpp
include/options/: options.hpp  optionseditor.hpp
include/settings/: settings.hpp  settingsmanager.hpp
include/textedit/: codeview.hpp  codeviewcursor.hpp  syntax.hpp
include/textedit/language/: languagemanager.hpp  syntax.hpp
langs/: c.json  html.json
source/: lightcode.cpp  textedit.cpp  window.cpp
source/content/: conentmanager.cpp  contentpage.cpp  settingspage.cpp  textedit.cpp
source/filemanager/: filemanager.cpp
source/options/: options.cpp  optionseditor.cpp
source/settings/: settingsmanager.cpp
source/textedit/: codeview.cpp  codeviewcursor.cpp  syntax.cpp
source/textedit/language/: languagemanager.cpp  syntax.cpp
